# textual-bee

./: LICENSE  README.md  pyproject.toml
textual_bee/: __init__.py  app.css  word_list.json  words_utils.py
