[tool.poetry]
name = "textual-bee"
version = "1.0.0"
description = ""
authors = ["torshepherd <tor.aksel.shepherd@gmail.com>"]
readme = "README.md"
packages = [{ include = "textual_bee" }]

[tool.poetry.dependencies]
python = "^3.11"
textual = { version = "^0.9.1" }

[tool.poetry.scripts]
textual-bee = "textual_bee:run_app"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
textual = { extras = ["dev"], version = "^0.9.1" }
ruff = "^0.0.228"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
